将finalize换为close