@@ -17,6 +17,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs = ["--add-opens=java.base/java.util=ALL-UNNAMED"]
 }
 
 jar {
